tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_unused_items_errors_on_unused_function/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: cannot compile crate into a program as it does not contain a `main` function

Aborting due to 1 previous error
